Fixed the visibility of the dots for IE9

--- a/wp-content/themes/ameris-bank/sass/components/pages/home/_slides.scss
+++ b/wp-content/themes/ameris-bank/sass/components/pages/home/_slides.scss
@@ -97,6 +97,11 @@
 	width: 100%;
 }
 
+.slick-list {
+	position: relative;
+	z-index: 2;
+}
+
 .slick-dots {
 	list-style: none;
 	margin: 0 auto;
@@ -109,6 +114,8 @@
 
 	li {
 		display: inline-block;
+		position: relative;
+		z-index: 15;
 		//line-height: 0;
 		list-style: none;
 		margin: 0;
@@ -121,6 +128,10 @@
 		overflow: hidden;
 		@include rem-fallback(width, 1.6);
 		@include rem-fallback(height, 1.6);
+		border-color: $white;
+		@include rem-fallback(border-width, .2);
+		border-style: solid;
+		transition: all .2s;
 
 		&:before {
 			content: none;
@@ -133,16 +144,15 @@
 			background: transparent;
 			border-radius: 50%;
 			overflow: hidden;
-			@include rem-fallback(border-radius, 1);
 			border-color: $white;
-			@include rem-fallback(border-width, .2);
-			border-style: solid;
-			transition: all .2s;
+			//@include rem-fallback(border-width, .2);
+			//border-style: solid;
+			//transition: all .2s;
 			padding: 0;
 			box-shadow: none;
 		}
 
-		&.slick-active button {
+		&.slick-active {
 			background-color: $white;
 
 		}
