--- a/wp-content/themes/ameris-bank/style.css
+++ b/wp-content/themes/ameris-bank/style.css
@@ -5742,6 +5742,12 @@ a.account-open__button:hover:after, a.account-open__button:focus:after {
 }
 
 /* line 100, sass/components/pages/home/_slides.scss */
+.slick-list {
+  position: relative;
+  z-index: 2;
+}
+
+/* line 105, sass/components/pages/home/_slides.scss */
 .slick-dots {
   list-style: none;
   margin: 0 auto;
@@ -5753,9 +5759,11 @@ a.account-open__button:hover:after, a.account-open__button:focus:after {
   z-index: 15;
   text-align: center;
 }
-/* line 110, sass/components/pages/home/_slides.scss */
+/* line 115, sass/components/pages/home/_slides.scss */
 .slick-dots li {
   display: inline-block;
+  position: relative;
+  z-index: 15;
   list-style: none;
   margin: 0;
   margin: 0px 8px 0px 8px;
@@ -5769,12 +5777,17 @@ a.account-open__button:hover:after, a.account-open__button:focus:after {
   width: 1.6rem;
   height: 16px;
   height: 1.6rem;
+  border-color: #ffffff;
+  border-width: 2px;
+  border-width: 0.2rem;
+  border-style: solid;
+  transition: all .2s;
 }
-/* line 125, sass/components/pages/home/_slides.scss */
+/* line 136, sass/components/pages/home/_slides.scss */
 .slick-dots li:before {
   content: none;
 }
-/* line 129, sass/components/pages/home/_slides.scss */
+/* line 140, sass/components/pages/home/_slides.scss */
 .slick-dots li button {
   text-indent: -9999px;
   width: 16px;
@@ -5784,57 +5797,51 @@ a.account-open__button:hover:after, a.account-open__button:focus:after {
   background: transparent;
   border-radius: 50%;
   overflow: hidden;
-  border-radius: 10px;
-  border-radius: 1rem;
   border-color: #ffffff;
-  border-width: 2px;
-  border-width: 0.2rem;
-  border-style: solid;
-  transition: all .2s;
   padding: 0;
   box-shadow: none;
 }
-/* line 145, sass/components/pages/home/_slides.scss */
-.slick-dots li.slick-active button {
+/* line 155, sass/components/pages/home/_slides.scss */
+.slick-dots li.slick-active {
   background-color: #ffffff;
 }
 
 @media (max-width: 529px) {
-  /* line 153, sass/components/pages/home/_slides.scss */
+  /* line 163, sass/components/pages/home/_slides.scss */
   .slick-dots {
     bottom: 15px;
     bottom: 1.5rem;
   }
 
-  /* line 156, sass/components/pages/home/_slides.scss */
+  /* line 166, sass/components/pages/home/_slides.scss */
   .button.slide__cta {
     display: inline-block;
   }
 
-  /* line 159, sass/components/pages/home/_slides.scss */
+  /* line 169, sass/components/pages/home/_slides.scss */
   .slide__text-wrap {
     text-align: center;
   }
 }
 @media (min-width: 530px) and (max-width: 739px) {
-  /* line 165, sass/components/pages/home/_slides.scss */
+  /* line 175, sass/components/pages/home/_slides.scss */
   .button.slide__cta {
     display: inline-block;
   }
 
-  /* line 168, sass/components/pages/home/_slides.scss */
+  /* line 178, sass/components/pages/home/_slides.scss */
   .slide__text-wrap {
     text-align: center;
   }
 }
 @media (min-width: 740px) {
-  /* line 177, sass/components/pages/home/_slides.scss */
+  /* line 187, sass/components/pages/home/_slides.scss */
   .slide__blurb {
     font-size: 65px;
     font-size: 6.5rem;
   }
 
-  /* line 181, sass/components/pages/home/_slides.scss */
+  /* line 191, sass/components/pages/home/_slides.scss */
   .slide__text-wrap {
     width: 400px;
     width: 40rem;
@@ -5845,27 +5852,27 @@ a.account-open__button:hover:after, a.account-open__button:focus:after {
     bottom: inherit;
   }
 
-  /* line 191, sass/components/pages/home/_slides.scss */
+  /* line 201, sass/components/pages/home/_slides.scss */
   .slick-dots {
     bottom: 40px;
     bottom: 4rem;
     right: 5%;
     width: auto;
   }
-  /* line 195, sass/components/pages/home/_slides.scss */
+  /* line 205, sass/components/pages/home/_slides.scss */
   .slick-dots li {
     margin: 0px 0px 0px 16px;
     margin: 0rem 0rem 0rem 1.6rem;
   }
 }
 @media (min-width: 1024px) {
-  /* line 204, sass/components/pages/home/_slides.scss */
+  /* line 214, sass/components/pages/home/_slides.scss */
   .slide__blurb {
     font-size: 80px;
     font-size: 8rem;
   }
 
-  /* line 208, sass/components/pages/home/_slides.scss */
+  /* line 218, sass/components/pages/home/_slides.scss */
   .slide__text-wrap {
     width: 490px;
     width: 49rem;
